Fixed navbar top, link contact us to contact us section, fix responsiveness in index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="{% url 'homepage' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="#contact-us">Contact Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Our Rooms</a>
