--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,7 +41,7 @@ p {
 .index-info {
   position: absolute;
   z-index: 1;
-  padding-top: 50px;
+  padding-top: 25px;
   padding-bottom: 25px;
   left: 0; 
   right: 0;
@@ -68,7 +68,8 @@ p {
     height: 100vh;
     width: 100%;
     object-fit: cover;
-    max-height: 992px;
+    max-height: 600px;
+    margin-top: 70px;
 }
 
 /* Give margin to headings */
@@ -111,8 +112,9 @@ form {
 }
 
 /* Map */
-#map > p {
+#map > h2 {
   padding-top: 10px;
+  padding-bottom: 20px;
 }
 
 #map-container {
@@ -123,13 +125,18 @@ form {
 
 #map {
   width: 75%;
-  height: 75%;
 }
 
 /* Contact Us */
 #contact-us {
   padding-top: 10px;
   padding-bottom: 50px;
+  background-color: #f8f9fa;
+}
+
+#contact-us > h2 {
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 /* Footer */
@@ -139,19 +146,25 @@ form {
 }
 
 /*index-info responsive for larger screens */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 835px) {
   .index-info {
-    margin-top: 50px;
+    margin-top: 100px;
+  }
+  #map {
+    width: 50%;
   }
 }
 
 /*index-info responsive for smaller screens */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 835px) {
   .index-info {
     position: initial;
     padding-top: 15px;
   }
   .image1 {
     height: auto;
+  }
+  #index-main-div {
+    margin: auto !important;
   }
 }
