--- a/templates/booknow.html
+++ b/templates/booknow.html
@@ -22,8 +22,8 @@
             </form>
             {% else %}
             
-            <div class="text-center mgn-h">
-                <h2>Please sign in to book a room.</h2>
+            <div class="text-center">
+                <h1>Please sign in to book a room.</h1>
                 <a href="{% url 'account_login' %}">
                     <button class="btn btn-primary mgn-btn">Sign in</button>
                 </a>
