--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,14 @@
             <div class="row">
                 <img class="img-fluid image1" src="https://res.cloudinary.com/marcellomuy/hotel-hero-img.png" alt="Hotel lobby image">
                 <div class="col-md-8 offset-md-2 index-info">
-                    <h1>Welcome to Marco Polo Hotel!</h1>
-                    <p>Located in Bray, the biggest town in County Wicklow, Ireland. 
+                    <h1>Marco Polo Hotel</h1>
+                    <p><strong>Located in Bray, the biggest town in County Wicklow, Ireland. 
                         It is known as the Gateway to the Garden of Ireland and is the longest established seaside town in Ireland. 
                         The hotel offers 120 comfortably furnished guest rooms. 
                         All rooms have cable TV and wireless internet access. 
                         All standard guest rooms are equipped with private bathrooms, hairdryers, spacious work desks, 
-                        direct-dial telephones, and satellite television.</p>
-                    <p>We look forward to seeing you at Marco Polo Hotel!</p>
+                        direct-dial telephones, and satellite television.</strong></p>
+                    <p><strong>We look forward to seeing you at Marco Polo Hotel!</strong></p>
                     <div>
                         <a href="{% url 'booknow' %}">
                             <button class="btn btn-success">Book Now</button>
