--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="{% url 'homepage' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact-us">Contact Us</a>
+                    <a class="nav-link" href="{% url 'homepage' %}#contact-us">Contact Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Our Rooms</a>
