Remove buttons from inside a tags

--- a/templates/booknow.html
+++ b/templates/booknow.html
@@ -24,9 +24,7 @@
             
             <div class="text-center">
                 <h1>Please sign in to book a room.</h1>
-                <a href="{% url 'account_login' %}">
-                    <button class="btn btn-primary mgn-btn">Sign in</button>
-                </a>
+                <a href="{% url 'account_login' %}" class="btn btn-primary mgn-btn">Sign in</a>
             </div>
             {% endif %}
         </div>
