--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -9,9 +9,7 @@
         <p>We will get in touch with you when your booking is confirmed.</p>
         <p>Meanwhile, you can manage your bookings in the My Bookings page.</p>
 
-        <a href="{% url 'mybookings' %}">
-            <button class="btn btn-primary">Manage Bookings</button>
-        </a>
+        <a href="{% url 'mybookings' %}" class="btn btn-primary">Manage Bookings</a>
 </div>
 </div>
 
