--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,8 @@
                         direct-dial telephones, and satellite television.</strong></p>
                     <p><strong>We look forward to seeing you at Marco Polo Hotel!</strong></p>
                     <div>
-                        <a href="{% url 'booknow' %}">
-                            <button class="btn btn-success">Book Now</button>
-                        </a>
-                        <a href="#">
-                            <button class="btn btn-info">Our Rooms</button>
-                        </a>
+                        <a href="{% url 'booknow' %}" class="btn btn-success">Book Now</a>
+                        <a href="#" class="btn btn-info">Our Rooms</a>
                     </div>
                 </div>
             </div>
