--- a/templates/mybookings.html
+++ b/templates/mybookings.html
@@ -42,9 +42,7 @@
         {% else %}
             <div class="text-center">
                 <h1 class="pdn-h">Please sign in to view your bookings.</h1>
-                <a href="{% url 'account_login' %}">
-                <button class="btn btn-primary mgn-btn">Sign in</button>
-                </a>
+                <a href="{% url 'account_login' %}" class="btn btn-primary mgn-btn">Sign in</a>
             </div>
             
         {% endif %}
