--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,11 @@ body {
 }
 
 h1 {
-  margin-top: 15px;
+  padding-top: 15px;
+}
+
+h3 {
+  padding-top: 10px;
 }
 
 p {
@@ -68,7 +72,7 @@ p {
 }
 
 /* Adjust hero img responsiveness */
-.image1 {
+.hero-image {
     height: 100vh;
     width: 100%;
     object-fit: cover;
@@ -146,6 +150,12 @@ form {
   margin-bottom: 20px;
 }
 
+/* Our Rooms page */
+.rooms-div {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 /* Footer */
 #footer > a {
   color: #005B4B ;
@@ -168,10 +178,13 @@ form {
     position: initial;
     padding-top: 15px;
   }
-  .image1 {
+  .hero-image {
     height: auto;
   }
-  #index-main-div {
+  .main-div {
     margin: auto !important;
+  }
+  h1 {
+    padding-top: 0;
   }
 }
