--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="{% url 'homepage' %}#contact-us">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Our Rooms</a>
+                    <a class="nav-link" href="{% url 'ourrooms' %}">Our Rooms</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'booknow' %}">Book Now</a>
