Add padding to family room div in ourrooms.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,6 +160,10 @@ form {
   padding-bottom: 10px;
 }
 
+#family-room-div {
+  padding-bottom: 50px;
+}
+
 /* Footer */
 #footer > a {
   color: #005B4B ;
