--- a/templates/ourrooms.html
+++ b/templates/ourrooms.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div id="family-room-div" class="row">
             <div class="col-md-8 offset-md-2 container text-center">
                 <h2>Family Room</h2>
                 <img class="img-fluid" src="https://res.cloudinary.com/marcellomuy/image/upload/v1649309989/family-room-img.png" alt="Family Room image">
