--- a/templates/mybookings.html
+++ b/templates/mybookings.html
@@ -16,7 +16,8 @@
                                 <p class="card-text">Room: {{ booking.type_of_room}}</p>
                                 <p class="card-text">Guests: {{ booking.number_of_guests}}</p>
                                 <a href="/update/{{ booking.id }}" class="btn btn-primary">Update</a>
-                                <a href="/cancel/{{ booking.id }}" class="btn btn-danger">Cancel</a>
+                                <a href="/cancel/{{ booking.id }}" class="btn btn-danger" 
+                                    onclick="return confirm('Are you sure you want to cancel this booking?');">Cancel</a>
                             </div>
                         </div>
                     {% empty %}
