Uninstall django-active-links

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,5 @@
 {% load static %}
 
-{% load active_link_tags %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -42,18 +40,22 @@
                 <li class="nav-item {% if request.path == url %}is-active{% endif %}">
                     <a class="nav-link" href="{% url 'homepage' %}#contact-us">Contact Us</a>
                 </li>
-                <li class="nav-item {% active_link 'ourrooms' 'is-active' %}">
+                {% url 'ourrooms' as url %}
+                <li class="nav-item {% if request.path == url %}is-active{% endif %}">
                     <a class="nav-link" href="{% url 'ourrooms' %}">Our Rooms</a>
                 </li>
-                <li class="nav-item active {% active_link 'booknow' 'is-active' %}">
+                {% url 'booknow' as url %}
+                <li class="nav-item {% if request.path == url %}is-active{% endif %}">
                     <a class="nav-link" href="{% url 'booknow' %}">Book Now</a>
                 </li>
-                <li class="nav-item {% active_link 'mybookings' 'is-active' %}">
+                {% url 'mybookings' as url %}
+                <li class="nav-item {% if request.path == url %}is-active{% endif %}">
                     <a class="nav-link" href="{% url 'mybookings' %}">My Bookings</a>
                 </li>
                 {% if user.is_authenticated %}
-                {% else %}        
-                <li class="nav-item {% active_link 'account_signup' 'is-active' %}">
+                {% else %}
+                {% url 'account_signup' as url %}        
+                <li class="nav-item {% if request.path == url %}is-active{% endif %}">
                     <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
                 </li>
                 {% endif %}
@@ -63,11 +65,13 @@
             <!-- Check if user is authenticated -->
             <ul class="navbar-nav mb-2 mb-lg-0">
                 {% if user.is_authenticated %}
-                    <li class="nav-item sign-link {% active_link 'account_logout' 'is-active' %}">
+                {% url 'account_logout' as url %} 
+                    <li class="nav-item sign-link {% if request.path == url %}is-active{% endif %}">
                         <a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a>
                     </li>
                 {% else %}
-                    <li class="nav-item sign-link {% active_link 'account_login' 'is-active' %}">
+                {% url 'account_login' as url %} 
+                    <li class="nav-item sign-link {% if request.path == url %}is-active{% endif %}">
                         <a class="nav-link" href="{% url 'account_login' %}">Sign in</a>
                     </li>
                 {% endif %}
