Footer social links open in a nem page, add aria labels to links

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,9 +103,12 @@
     <!-- Footer -->
     <footer class="fixed-bottom py-3 bg-light">
             <div id="footer" class="footer mt-auto text-center"> 
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook-square fa-2xl"></i></a>
-                <a href="https://twitter.com/"><i class="fab fa-twitter-square fa-2xl"></i></a>
-                <a href="https://www.instagram.com/"><i class="fab fa-instagram-square fa-2xl"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                aria-label="visit our Facebook page (opens in a new page)"><i class="fab fa-facebook-square fa-2xl"></i></a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener"
+                aria-label="visit our Twitter page (opens in a new page)"><i class="fab fa-twitter-square fa-2xl"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                aria-label="visit our Instgram page (opens in a new page)"><i class="fab fa-instagram-square fa-2xl"></i></a>
             </div>
     </footer>
 
