--- a/templates/index.html
+++ b/templates/index.html
@@ -25,13 +25,9 @@
             <div id="map" class="container text-center">
                 <h2>You can find us at Bray Seafront</h2>
                 <div class="embed-responsive embed-responsive-4by3">
-                    <iframe class="embed-responsive-item" src="
-                        https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6759.4299839180985!2d-6.096527308162241!3d53.
-                        20315525395623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xde581fec26c81f03!2sBray%
-                        20Seafront!5e0!3m2!1sen!2sie!4v1649236701278!5m2!1sen!2sie
-                        " 
-                        allowfullscreen="" loading="lazy" 
-                        referrerpolicy="no-referrer-when-downgrade">
+                    <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6759.4299839180985!2d-6.096527308162241!3d53.20315525395623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xde581fec26c81f03!2sBray%20Seafront!5e0!3m2!1sen!2sie!4v1649236701278!5m2!1sen!2sie"
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
             </div>
