--- a/templates/booknow.html
+++ b/templates/booknow.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="booking-form col-md-8 offset-md-2">
             {% if user.is_authenticated %}
 
             <div class="text-center">
