Add btn-btom class to fix buttons going under the footer in smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,9 +93,9 @@ p {
   margin-top: 15px;
 }
 
-/* Booking Form */
-.booking-form {
-  padding-bottom: 50px;
+/* Gives padding-bottom */
+.pdn-btom {
+  padding-bottom: 60px;
 }
 
 /* My bookings */
