--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -24,7 +24,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <div class="col-md-12 text-center">
+        <div class="pdn-btom col-md-12 text-center">
           <button class="primaryAction btn btn-primary" type="submit">{% trans "Sign In" %}</button>          
         </div>
         
