--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -24,7 +24,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <div class="col-md-12 text-center">
+        <div class="pdn-btom col-md-12 text-center">
           <button type="submit" class="btn btn-primary">{% trans "Sign Up" %}</button>
         </div>
       </form>
